# arkanoid

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.user.07d16c0  CMakeLists.txt.user.806e31a  CMakeSettings.json  README.md  UML.mdj  cmake_install.cmake
assets/levels/: level1.txt  level2.txt  level3.txt  level4.txt
src/: Main.cpp  main.cpp  singleton.h  vector2.h
src/Board/: board.cpp  board.h
src/Component/: ball_number.h  bonus.h  button.h  collision.h  collision_component.h  component.cpp  component.h  component_pool.cpp  component_pool.h  control.h  health.h  hit_component.h  motion.h  movement_component.h  points.h  points_component.h  render_component.h  sprite.h  text.h  text_component.h  transform.h  transform_component.h  type_component.h
src/Component/Components/: collision.cpp  collision.h  graphic.cpp  graphic.h  position.cpp  position.h  velocity.cpp  velocity.h
src/Component/Graphic/: graphic.cpp  graphic.h
src/Component/Position/: position.cpp  position.h
src/ComponentManager/: component_manager.cpp  component_manager.h
src/Entity/: Entity.cpp  Entity.h  dynamic_entity.cpp  dynamic_entity.h  entity.cpp  entity.h  entity_factory.cpp  entity_factory.h  entity_pool.cpp  entity_pool.h  static_entity.h
src/Entity/Ball/: Ball.cpp  Ball.h  ball.cpp  ball.h
src/Entity/Bonus/: bonus.cpp  bonus.h
src/Entity/Brick/: brick.cpp  brick.h
src/Entity/Button/: button.cpp  button.h
src/Entity/Entities/: ball.cpp  ball.h  ship.cpp  ship.h
src/Entity/Player/: player.cpp  player.h
src/Entity/Ship/: Ship.cpp  Ship.h  ship.cpp  ship.h
src/Entity/Text/: text.cpp  text.h
src/Entity/Wall/: wall.cpp  wall.h
src/EntityManager/: entity_manager.cpp  entity_manager.h
src/EventManager/: event_manager.cpp  event_manager.h
src/Game/: Game.cpp  Game.h  game.cpp  game.h
src/InputManager/: InputManager.cpp  InputManager.h  KeyManager.cpp  KeyManager.h  MouseManager.cpp  MouseManager.h  input_manager.cpp  input_manager.h  key_manager.cpp  key_manager.h  mouse_manager.cpp  mouse_manager.h
src/Level/: level.cpp  level.h
src/LevelManager/: level_manager.cpp  level_manager.h
src/Player/: player.cpp  player.h
src/PowerUp/: power_up.cpp  power_up.h
src/Scene/: scene.cpp  scene.h  scene_manager.cpp  scene_manager.h
src/Scene/GameOverScene/: game_over_scene.cpp  game_over_scene.h
src/Scene/GameScene/: game_scene.cpp  game_scene.h
src/Scene/MenuScene/: menu_scene.cpp  menu_scene.h
src/Scene/TransitionScene/: transition_scene.cpp  transition_scene.h
src/System/: system.cpp  system.h  system_manager.cpp  system_manager.h
src/System/BonusSystem/: bonus_system.cpp  bonus_system.h
src/System/ButtonSystem/: button_system.cpp  button_system.h
src/System/ColliderSystem/: collider_system.cpp  collider_system.h
src/System/Collision/: collision.cpp  collision.h
src/Window/: Window.cpp  Window.h  window.cpp  window.h
(+24 files in other folders)
